# meta-ads-dashboard

./: .env.example  .env.template  .gitignore  AI功能使用指南.md  Pydantic_AI_Agents_文件.md  Pydantic_AI_改造計畫.md  README.md  Streamlit分頁規劃.md  app.py  check_chromadb.py  main.py  notes.md  pyproject.toml  test_cache.py  test_data_load.py  使用者手冊.md  廣告投手高效工作流程.md  廣告顯示組件使用說明.md  每日檢查清單.md  用戶使用指南.md  系統優化建議.md  耘初茶食.xlsx  耘初茶食2.xlsx  銷售文案.md  開發文件.md  階段1_快取系統_完成報告.md  頁面精簡建議.md
components/: __init__.py  kpi_cards.py
config/: __init__.py  chart_config.py  constants.py
docs/: AI廣告素材生成工具_商業機會書.md  商業導向功能開發計畫.md  商業導向開發手冊.md  專案優化計畫.md  燒賣 AI 產品開發實戰學程.md  燒賣-零售 AI 工作坊.md  路老闆-Vibe Coding 讓你動嘴巴就可以寫留名單系統.md  頁面清單.md  頁面結構說明.md
pages/: 10_⚡_即時優化建議.py  12_✍️_AI文案生成.py  13_🎨_AI圖片生成.py  14_🧠_智能素材優化.py  15_🎯_智能投放策略.py  16_🧠_RAG知識庫管理.py  17_👥_受眾擴展建議.py  18_💰_預算優化建議.py  19_📄_自動化報告.py  1_📊_整體效能儀表板.py  20_🧪_AB測試設計.py  21_🤖_智能Agent巡檢.py  22_💬_對話式投放助手.py  23_🌐_競爭對手分析.py  24_🧬_多變量測試優化.py  25_📸_AI圖片分析與優化.py  26_📈_AI素材效能監控.py  27_🗄️_快取管理.py  28_📊_效能與成本儀表板.py  29_🧪_A_B_測試控制台.py  2_🎯_活動分析.py  30_📜_Agent執行歷史.py  31_⚙️_個人化偏好.py  32_📦_模板管理後台.py  33_🛍️_模板市集.py  34_🔐_品牌知識庫授權.py  35_📄_週報生成.py  36_🗓️_報表排程與寄送.py  37_📊_ROI模擬器.py  38_🛏️_素材疲勞預測.py  39_💰_預算重分配助手.py  3_👥_受眾洞察.py  40_🔁_多平台轉換中心.py  41_📊_模板成效儀表.py  4_💰_ROI分析.py  5_🎨_素材成效分析.py  6_📈_廣告品質評分.py  7_🔄_轉換漏斗優化.py  8_📋_詳細數據表格.py  ai_copywriting.py  (+7 more)
scripts/: seed_fatigue_pilots.py  seed_license_pilots.py  seed_templates.py
tests/: test_api_keys.py  test_budget_optimizer.py  test_content_ingestor.py  test_data_loader.py  test_error_handler.py  (+10 more)
(+80 files in other folders)
